поправил верстку, добавил блок о коммерции добавил документацию

--- a/Areas/Admin/Views/Owner/GetAddWorkServices.cshtml
+++ b/Areas/Admin/Views/Owner/GetAddWorkServices.cshtml
@@ -188,6 +188,11 @@
             <span class="error-message"></span>
         </p2>
         <p2 class="validation_text">
+            <label>Цена</label>
+            <input class="text_input_form" autocomplete="off" placeholder="Укажите цену" name="workServicesExample.Price" value="@Model.workServicesExample!.Price" data-rule-required="true" data-msg-required="Это поле не должно быть пустым" />
+            <span class="error-message"></span>
+        </p2>
+        <p2 class="validation_text">
             <label>Описание</label>
             <input class="text_input_form" autocomplete="off" placeholder="Описание" name="workServicesExample.Description" value="@Model.workServicesExample!.Description" />
         </p2>
