--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,15 +6,14 @@
     @await Html.PartialAsync("~/Views/Shared/Section/ServicesSectionPartial.cshtml")
     <!-- who section start -->
     <div class="who_section layout_padding">
-        <div class="container">
+        <div class="container innav">
             <h1 class="who_taital">Почему мы?</h1>
-            <h4 class="designer_text">Дизайнеры и инноваторы</h4>
-            <p class="lorem_ipsum_text">
-            Мы знаем, что ремонт – это сложный и ответственный процесс, поэтому наша команда состоит из профессионалов, которые имеют богатый опыт в данной отрасли. Мы гарантируем высокое качество работ и соблюдение сроков, чтобы вы могли наслаждаться обновленной квартирой в кратчайшие сроки.
-            Мы предлагаем полный комплекс услуг: от дизайн-проекта до чистовой отделки. Наши дизайнеры разработают индивидуальный проект, учитывая ваши пожелания и потребности. Мы предлагаем широкий выбор отделочных материалов высокого качества и современного дизайна.
-            Мы бережно относимся к вашему бюджету и всегда стараемся предложить оптимальное решение для вас. Мы работаем без посредников, что позволяет нам предлагать конкурентные цены на рынке ремонтных услуг.
-            Выбирая нашу компанию, вы можете быть уверены в том, что ваш ремонт будет выполнен профессионально, качественно и в срок. Мы готовы воплотить в жизнь ваши мечты об уютной и красивой квартире! Обращайтесь к нам и получите бесплатную консультацию по всем вопросам ремонта квартир "под ключ".
-            </p>
+            <h4 class="designer_text">с нами вы гарантированно получаете:</h4>
+        <p class="lorem_ipsum_text">-<strong><span style="font-size: 1.2em;">БЕСПЛАТНЫЙ</span></strong> замер и консультация специалиста</p>
+        <p class="lorem_ipsum_text">-При заказе любого ремонта у нас, вы можете приобрести любые стройматериалы у наших партнеров со скидкой до <strong><span style="font-size: 1.2em;">30%</span></strong></p>
+        <p class="lorem_ipsum_text">-Полный расчет стоимости ремонта в течении 1 рабочего дня. В дальнейшем эта сумма остается неизменной.</p>
+        <p class="lorem_ipsum_text">-Связь с прорабом и отчеты о проделанной работе в <strong><span style="font-size: 1.2em;">ЛЮБОЕ ВРЕМЯ</span></strong></p>
+        <p class="lorem_ipsum_text">-<strong><span style="font-size: 1.2em;">При заказе комплексных услуг действуют персональные скидки</span></strong></p>
         </div>
         <div class="get_bt_main">
         <div class="get_bt"><a href="@Url.Action("Contact", "Home")">Заказать замер</a></div>
