--- a/Views/Shared/HeaderPartial.cshtml
+++ b/Views/Shared/HeaderPartial.cshtml
@@ -3,7 +3,7 @@
 <div class="header_section">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="logo"><a href="@Url.Action("Index", "Home")"><img src="/images/logo.png"></a></div>
+            <div class="logo"><a href="@Url.Action("Index", "Home")"><img src="/images/new_logo.png"></a></div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -51,7 +51,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <h1 class="furniture_text">Гарантия</h1>
-                        <p class="second_text">Ремонт вашего жилища в Краснодаре и Краснодарском крае с гарантией</p>
+                        <p class="second_text">Ремонт вашей недвижимости в Краснодаре и Краснодарском крае с гарантией</p>
                         <p class="there_text">Даем 100 процентную гарантию качества. Профессионализм наших специалистов, эффективные технологии и новейшие материалы обеспечивают прочность и надежность всех аспектов ремонта.</p>
                         <div class="carousel_grid_container">
                             <div class="carousel_grid_item">
@@ -60,7 +60,7 @@
                             </div>
                             <div class="carousel_grid_item">
                                 <img src="~/images/shield.png" />
-                                <p class="s_text">Гарантия на ремонт 3 года.</p>
+                                <p class="s_text">Гарантия на ремонт от 1 года.</p>
                             </div>
                             <div class ="carousel_grid_item" id="item_3">
                                 <img src="~/images/offer.png" />
