--- a/Views/Shared/Section/ContactSectionPartial.cshtml
+++ b/Views/Shared/Section/ContactSectionPartial.cshtml
@@ -45,7 +45,7 @@
                 <div class="col-md-6">
                     <div class="map_main">
                         <div class="map-responsive">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2820.270741468247!2d38.981827476645684!3d45.01942916300391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40f04fc61253a9c9%3A0x1b80f7e575ea80ed!2z0YPQuy4g0JvQtdC90LjQvdCwLCAxNDQsINCa0YDQsNGB0L3QvtC00LDRgCwg0JrRgNCw0YHQvdC-0LTQsNGA0YHQutC40Lkg0LrRgNCw0LksIDM1MDAzMw!5e0!3m2!1sru!2sru!4v1692025433773!5m2!1sru!2sru" width="600" height="500" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2819.8794954020796!2d38.96909127735662!3d45.027371662476924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40f04fbb0fc1ab41%3A0x87ad314a73e0f4!2z0YPQuy4g0JrRgNCw0YHQvdCw0Y8sIDY4LCDQmtGA0LDRgdC90L7QtNCw0YAsINCa0YDQsNGB0L3QvtC00LDRgNGB0LrQuNC5INC60YDQsNC5LCAzNTAwMDA!5e0!3m2!1sru!2sru!4v1702650589872!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
