--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -5,20 +5,20 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="image_1"><img src="~/images/4318759.jpg"></div>
+                <div class="image_1"><img src="~/images/new_logo.png"></div>
             </div>
             <div class="col-md-6">
                 <h1 class="about_text_black">Карточка компании</h1>
                 <p class="lorem_text_black">Ссылки на корпоративную документацию.</p>
                 <ol>
                     <li>
-                        <a href="#">Пример сметы</a>
+                        <a href="DownloadDocument?documentName=part.xls&contentType=application/vnd.ms-excel">Юридическая информация</a>
                     </li>
                     <li>
-                        <a href="#">Пример договора о проведении ремонтных работ.</a>
+                        <a href="DownloadDocument?documentName=doc2023.doc&contentType=application/msword">Пример договора о проведении ремонтных работ.</a>
                     </li>
                     <li>
-                        <a href="#">Аттестат качества.</a>
+                        <a href="DownloadDocument?documentName=privacy.docx&contentType=application/msword">Политика конфиденциальности</a>
                     </li>
                 </ol>
                 <div class="contact_bt"><a href="@Url.Action("About","Home")">Подробнее</a> </div>
