--- a/Views/Shared/CssPartial.cshtml
+++ b/Views/Shared/CssPartial.cshtml
@@ -13,6 +13,7 @@
 <!-- owl stylesheets -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+<link rel="stylesheet" href="~/css/flip.min.css" asp-append-version="true" />
 
 
 
