--- a/Views/Shared/HeaderWithoutSliderPartial.cshtml
+++ b/Views/Shared/HeaderWithoutSliderPartial.cshtml
@@ -2,7 +2,7 @@
 <div class="header_section">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="logo"><a href="@Url.Action("Index", "Home")"><img src="/images/logo.png"></a></div>
+            <div class="logo"><a href="@Url.Action("Index", "Home")"><img src="/images/new_logo.png"></a></div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
