--- a/Views/Home/ServicesByID.cshtml
+++ b/Views/Home/ServicesByID.cshtml
@@ -163,7 +163,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h1 class="purchase_text">Специальное предожение</h1>
+                <h1 class="purchase_text" style="font-size:300%">Специальное предложение</h1>
                 <p class="lorem_text">Оставьте заявку до конца месяца, и получите 5% скидку на ремонт.</p>
                 <div class="read_bt" id="read_bt_final"><a href="@Url.Action("Contact","Home")">Оставить заявку</a> </div>
             </div>
