--- a/wwwroot/css/responsive.css
+++ b/wwwroot/css/responsive.css
@@ -356,7 +356,7 @@
 
     .lorem_text {
         padding-top: 0px;
-        font-size: 20px;
+        font-size: 150%;
     }
 
     .read_bt1 {
@@ -605,7 +605,7 @@
 
     .lorem_text {
         padding-top: 0px;
-        font-size: 15px;
+        font-size: 150%;
     }
 
     .read_bt1 {
@@ -892,6 +892,7 @@
 
     .icon_1 {
         padding-top: 30px;
+        margin-bottom: 5%;
     }
 
     .read_bt_main {
@@ -900,7 +901,7 @@
 
     .lorem_text {
         padding-top: 0px;
-        font-size: 15px;
+        font-size: 150%;
     }
 
     .read_bt1 {
