+Исправлен баг с отзывами

--- a/Views/Home/ConfirmFeedback.cshtml
+++ b/Views/Home/ConfirmFeedback.cshtml
@@ -29,12 +29,11 @@
     </div>
 </div>
 <!-- header section end -->
-
 <!-- services section start -->
 <div class="confirm_container">
-    
-    <h6 class="furnitures_text" id="confirm_head_text">Ваша заявка успешно создана</h6>
-    <h1 class="dummy_text" id="confirm_text">Наши специалисты свяжутся с вами, в указанное вами время</h1>
+
+    <h6 class="furnitures_text" id="confirm_head_text">Спасибо за оставленный отзыв</h6>
+    <h1 class="dummy_text" id="confirm_text">Ваше мнение очень важно для нас!</h1>
     <div class="">
         <iframe src="https://yandex.ru/sprav/widget/rating-badge/103752062896?type=rating&theme=dark" width="150" height="50" frameborder="0"></iframe>
     </div>
