--- a/Views/Shared/FooterPartial.cshtml
+++ b/Views/Shared/FooterPartial.cshtml
@@ -36,6 +36,7 @@
                 <h2 class="footer_lorem_text1" style="font-size:18px; margin:0px; padding:3px" > По вопросам сотрудничества: </h2> 
                 <a class="footer_contact" style="margin-top:3px" href="tel:@Config.CompanyCooperationPhoneShort">@Config.CompanyCooperationPhone</a>
                 <a class="footer_contact" hidden href="#">Вакансии в @Config.CompanyName</a>
+                <iframe src="https://yandex.ru/sprav/widget/rating-badge/103752062896?type=rating&theme=dark" width="300" height="100" frameborder="0"></iframe>
             </div>
         </div>
         <div class="row">
