Последний коммит в ветку мастер далее переделываем верстку

--- a/Views/Shared/EntryFormPartial.cshtml
+++ b/Views/Shared/EntryFormPartial.cshtml
@@ -34,7 +34,7 @@
                     </form>
                 </div>
                 <div class="grid_item_1" >
-                    <div class="image_person"><img src="~/images/form_person1.png"></div>
+                    <div class="image_person"><img src="~/images/form_person1.png" alt="Менеджер"></div>
                 </div>
                 <div class="pop_up_close" id="pop_up_close">&#10006</div>
             </div>
