--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,7 +14,8 @@
         ym(96056705, "init", {
             clickmap: true,
             trackLinks: true,
-            accurateTrackBounce: true
+            accurateTrackBounce: true,
+            webvisor: true
         });
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/96056705" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
