--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,34 +1,108 @@
 ﻿    @using VartanMVCv2.Domain.Entities
     @using VartanMVCv2.ViewModels
 
-    @await Html.PartialAsync("HeaderPartial")
-    @await Html.PartialAsync("~/Views/Shared/Section/AboutSectionPartial.cshtml")
-    @await Html.PartialAsync("~/Views/Shared/Section/ServicesSectionPartial.cshtml")
-    <!-- who section start -->
-    <div class="who_section layout_padding">
-        <div class="container innav">
-            <h1 class="who_taital">Почему мы?</h1>
-            <h4 class="designer_text">с нами вы гарантированно получаете:</h4>
+@await Html.PartialAsync("HeaderPartial")
+
+<!-- about section start -->
+<div class="about_section layout_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h1 class="about_text">О компании</h1>
+                <p class="lorem_text">Компания «@Config.CompanyName» – строительная компания с большим опытом в ремонтных работах, гарантия качества и профессионализм штата сотрудников. Дизайнеры интерьера помогут переосмыслить зонирование вашей квартиры и создать еще более комфортные условия для жизни, а строители реализуют их смелые идеи точно так, как задумано.</p>
+                <div class="read_bt1"><a href="@Url.Action("About","Home")">Подробнее</a> </div>
+            </div>
+            <div class="col-md-6">
+                <div class="image_1"><img src="~/images/img1.png"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- about section end -->
+<!-- contact section start -->
+<div class="contact_section layout_padding commerce_tab" style="background-image: url(../images/block.jpg);">
+    <div class="flexible_box">
+        <div class="flex_item">
+            <h1 class="about_text">Мы работаем c коммерческими клиентами </h1>
+            <p class="lorem_text commerce">Наша компания @Config.CompanyName, занимается ремонтом не только частных домов и квартир, с гордостью предлагает свои услуги и коммерческому сектору. Независимо от типа вашего объекта - офисного пространства, магазина, ресторана или другого коммерческого помещения - мы гарантируем высококачественное выполнение всех необходимых работ.</p>
+            <div class="offer_conteiner">
+                <div class="carousel_grid_item st_tub">
+                    <img src="~/images/icon5.png" id="offer_in_corporat" />
+                    <p class="in_txt">Подберем решение под любой бюджет</p>
+                </div>
+                <div class="carousel_grid_item">
+                    <img src="~/images/icon2.png" id="offer_in_corporat" />
+                    <p class="in_txt">Опыт проектирования с 2015 года.</p>
+                </div>
+            </div>
+        </div>
+        <div class="flex_item">
+            <div class="img_box">
+                <img src="~/images/5219925.png" />
+            </div>
+        </div>
+        <div class="flex_item">
+            <h1 class="about_text">Что вы получаете от сотрудничества с нами:</h1>
+            <p class="lorem_text commerce">-При заказе ремонта у нас, скидки на стройматериалы у наших партнеров достигают <strong><span style="font-size: 1.2em;">30%</span></strong></p>
+            <p class="lorem_text commerce">-С вами будет работать наш прораб, который в любой момент ответит на все ваши вопросы и проконсультирует <strong><span style="font-size: 1.2em;">бесплатно</span></strong></p>
+            <p class="lorem_text commerce">-Фотоотчет или видеодемонстрация с объекта</p>
+            <div class="offer_conteiner">
+                <div class="carousel_grid_item" id="item_3">
+                    <img src="~/images/icon54.jpg" id="offer_in_corporat" />
+                    <p class="in_txt">Фиксированная стоимость в договоре</p>
+                </div>
+                <div class="carousel_grid_item">
+                    <img src="~/images/20943572.png" id="offer_in_corporat" />
+                    <p class="in_txt">Бесплатные консультации и замер</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- contact section end -->
+
+@await Html.PartialAsync("~/Views/Shared/Section/ServicesSectionPartial.cshtml")
+<!-- who section start -->
+<div class="who_section layout_padding">
+    <div class="container innav">
+        <h1 class="who_taital">Почему мы?</h1>
+        <h4 class="designer_text">с нами вы гарантированно получаете:</h4>
         <p class="lorem_ipsum_text">-<strong><span style="font-size: 1.2em;">БЕСПЛАТНЫЙ</span></strong> замер и консультация специалиста</p>
         <p class="lorem_ipsum_text">-При заказе любого ремонта у нас, вы можете приобрести любые стройматериалы у наших партнеров со скидкой до <strong><span style="font-size: 1.2em;">30%</span></strong></p>
         <p class="lorem_ipsum_text">-Полный расчет стоимости ремонта в течении 1 рабочего дня. В дальнейшем эта сумма остается неизменной.</p>
         <p class="lorem_ipsum_text">-Связь с прорабом и отчеты о проделанной работе в <strong><span style="font-size: 1.2em;">ЛЮБОЕ ВРЕМЯ</span></strong></p>
         <p class="lorem_ipsum_text">-<strong><span style="font-size: 1.2em;">При заказе комплексных услуг действуют персональные скидки</span></strong></p>
-        </div>
-        <div class="get_bt_main">
+    </div>
+    <div class="get_bt_main">
         <div class="get_bt"><a href="@Url.Action("Contact", "Home")">Заказать замер</a></div>
-        </div>
     </div>
-    <!-- who section end -->
-    @await Html.PartialAsync("~/Views/Shared/FeedbackFormPartial.cshtml")
-    @await Html.PartialAsync("~/Views/Shared/Section/FeedbackSectionPartial.cshtml") 
-    @await Html.PartialAsync("~/Views/Shared/Section/ContactSectionPartial.cshtml")
-    @await Html.PartialAsync("FooterPartial")
-    <!-- copyright section start -->
-    <div class="copyright_section">
-        <div class="container">
-            @await Html.PartialAsync("AutorPartial")
-        </div>
+</div>
+<!-- who section end -->
+@await Html.PartialAsync("~/Views/Shared/FeedbackFormPartial.cshtml")
+@await Html.PartialAsync("~/Views/Shared/Section/FeedbackSectionPartial.cshtml")
+@await Html.PartialAsync("~/Views/Shared/Section/ContactSectionPartial.cshtml")
+@await Html.PartialAsync("FooterPartial")
+<!-- copyright section start -->
+<div class="copyright_section">
+    <div class="container">
+        @await Html.PartialAsync("AutorPartial")
     </div>
-    <!-- copyright section end -->
-    @await Html.PartialAsync("ScriptsPartial")
+</div>
+<!-- copyright section end -->
+<div id="mobilePanel" class="mobile-panel">
+    <a href="tel:@Config.CompanyPhoneShort"><img src="/images/free-icon-phone-call-5400769.png" alt="Позвонить"></a>
+    <a href="https://wa.me/@Config.CompanyPhoneShort"><img src="/images/free-icon-whatsapp-4494494.png" alt="WhatsApp"></a>
+    <a href="https://t.me/@Config.CompanyPhoneShort"><img src="/images/free-icon-telegram-3670070.png" alt="Telegram"></a>
+</div>
+<script>
+    window.onload = function () {
+        var userAgent = navigator.userAgent.toLowerCase();
+        var isMobile = /android|webos|iphone|ipad|ipod|blackberry|iemobile|opera mini/i.test(userAgent);
+
+        if (isMobile) {
+            document.getElementById('mobilePanel').style.display = 'block';
+        }
+    };
+</script>
+
+@await Html.PartialAsync("ScriptsPartial")
