--- a/Views/Shared/HeaderPartial.cshtml
+++ b/Views/Shared/HeaderPartial.cshtml
@@ -64,8 +64,8 @@
     <div class="banner_section layout_padding">
         <div class="container">
             <div class="swiper-slide">
-                <h1 class="furniture_text">Доступный ремонт</h1>
-                <p class="second_text">Закажите ремонт жилого или коммерческого помещения "под-ключ", прямо сейчас и получите скидку 12%</p>
+                <h1 class="furniture_text">Скидка 12%</h1>
+                <p class="second_text">Закажите ремонт жилого или коммерческого помещения "под-ключ", прямо сейчас и получите скидку</p>
                 <div class="carousel_grid_container">
                     <div class="carousel_grid_item">
                         <img src="~/images/measuring-tape.png" />
