мелкие правки для рекламы

--- a/Views/Shared/HeaderPartial.cshtml
+++ b/Views/Shared/HeaderPartial.cshtml
@@ -66,6 +66,7 @@
             <div class="swiper-slide">
                 <h1 class="furniture_text">Скидка 12%</h1>
                 <p class="second_text">Закажите ремонт жилого или коммерческого помещения "под-ключ", прямо сейчас и получите скидку</p>
+                <p class="present_text">Компания Эталон-ПРО работает по Краснодару и Краснодарскому Краю </p>
                 <div class="carousel_grid_container">
                     <div class="carousel_grid_item">
                         <img src="~/images/measuring-tape.png" />
