--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -1497,7 +1497,7 @@ textarea#comment::placeholder {
 .carousel_grid_container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin-top: 60px;
+    margin-top: 21vh;
 }
 
 /*@media(max-width:800px) {
