--- a/Views/Shared/Section/ServicesSectionPartial.cshtml
+++ b/Views/Shared/Section/ServicesSectionPartial.cshtml
@@ -5,8 +5,8 @@
 <!-- furnitures section start -->
 <div class="furnitures_section layout_padding">
     <div class="container">
-        <h1 class="our_text">Перечень услуг</h1>
-        <p class="ipsum_text">Самый широкий спектр услуг</p>
+        <h1 class="our_text">Услуги</h1>
+        <p class="ipsum_text">Подберем вариант подходящий именно вам</p>
         <div class="furnitures_section2 layout_padding">
             <div class="row">
                 @{
