--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -272,7 +272,7 @@ button {
 .header_section {
     width: 100%;
     float: left;
-    background-image: url(/images/banner-bgb.png);
+    background-image: url(/images/banner-bgb.jpg);
     height: auto;
     background-size: 100%;
 }
